syntax = "proto3";

package superAdmin;

service SuperAdminService {
  rpc ListSuperAdmins(ListSuperAdminsRequest) returns (ListSuperAdminsResponse) {}
  rpc GetSuperAdmin(GetSuperAdminRequest) returns (SuperAdmin) {}
  rpc GetSuperAdminByEmail(GetSuperAdminByEmailRequest) returns (SuperAdmin) {}
  rpc CreateSuperAdmin(CreateSuperAdminRequest) returns (SuperAdmin) {}
  rpc UpdateSuperAdmin(UpdateSuperAdminRequest) returns (SuperAdmin) {}
  rpc DeleteSuperAdmin(DeleteSuperAdminRequest) returns (SuperAdmin) {}
}

enum Role {
  ROLE_UNSPECIFIED = 0;
  ROLE_ORGANIZATION = 1;
  ROLE_BASE = 2;
  ROLE_SUPER_ADMIN = 3;
  ROLE_USER = 4;
}

enum AccountKind {
  ACCOUNT_KIND_BASE = 0;
  ACCOUNT_KIND_ORGANIZATION = 1;
  ACCOUNT_KIND_SUPER_ADMIN = 2;
  ACCOUNT_KIND_USER = 3;
}

message SuperAdmin {
  string id = 1;
  AccountKind kind = 2;
  Role role = 3;
  string displayName = 4;
  string email = 5;
  optional string password = 6;
}

message ListSuperAdminsRequest {
  optional int32 page_size = 1;
  optional string next_page_cursor = 2;
}

message ListSuperAdminsResponse {
  repeated SuperAdmin super_admins = 1;
  string next_page_cursor = 2;
}

message GetSuperAdminRequest {
  string id = 1;
}

message GetSuperAdminByEmailRequest {
  string email = 1;
}

message CreateSuperAdminRequest {
  string id = 1;
  string displayName = 2;
  string email = 3;
  string password = 4;
}

message UpdateSuperAdminRequest {
  string id = 1;
  optional string displayName = 2;
  optional string email = 3;
}

message DeleteSuperAdminRequest {
  string id = 1;
}
